--- a/styles.css
+++ b/styles.css
@@ -137,16 +137,16 @@ main p{
     top:30px;
     right:30px;
     height:30px;
-    width:50px;
+    width:35px;
     flex-direction:column;
     justify-content:space-between;
     
 }
 .burger .salad{
-    height:8px;
+    height:7px;
     width:100%;
     border-radius:10px;
-    background-color:black;
+    background-color:#585772;
 }
 
 @media only screen and (max-width:950px){
@@ -158,6 +158,7 @@ main p{
     .laptop img{
         order:1;
         width:40vh;
+        height:40vh;
         
         
     }
